Revision history for Email-Sender

{{$NEXT}}

0.110003  2012-02-01 15:09:52 America/New_York
          add the add_lines_header and add_envelope_headers attributes to
          Maildir transports

0.110002  2012-01-31 17:02:35 America/New_York
          Maildir deliveries now have a ->filename method to tell you just
          where the mail was delivered

0.110001  2011-04-03 16:32:15 America/New_York

          prevent Test::MinimumVersion test from causing a requirement on T::MV
          and, thus, PPI!  Thanks for the report, Matt S. Trout!

0.110000  2011-03-17 21:40:36 America/New_York
          provide a much clearer and more fatal error when SASL authentication
          has failed because Authen::SASL or MIME::Base64 is not available

0.102370  2010-08-25 08:37:22 America/New_York
          remove spurious prereq on Sys::Hostname::Long (thanks ABH)
          tweak some tests for truth/definedness in SMTP transport

0.102360  2010-08-24 07:47:24 America/New_York
          avoid the need to use "excludes" in role application; this silences
          warnings with Moose 1.10

0.101760  2010-06-25 08:18:26 America/New_York
          fix sendmail.t with latest Capture::Tiny (Justin Hunter)

0.100460  2010-02-15 12:58:18 America/New_York
          avoid using AutoPrereq, as it brings in build_requires as requires

0.100450  2010-02-14 17:55:48 America/New_York
          allow timeout option to SMTP transport

0.100110  2010-01-11 10:43:57 America/New_York
          Email::Sender::Failure is now a Throwable::Error
          now uses Try::Tiny for internal exception handling

0.093380  2009-12-04 12:29:55 America/New_York
          bump Moose prereq to 0.70 based on feedback from ANDK

0.093110  2009-11-07
          allow uppercase env vars to set transport attributes (charsbar)
          add "message" attribute to successes returned by SMTP transports

0.092840  2009-10-10
          fix packaging error

0.092820  2009-10-09